--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -298,7 +298,7 @@
 	}
 
 	.hero h1 {
-		font-size: 32px
+		font-size: 32px;
 		margin-bottom: 10px;
 	}
 
@@ -319,7 +319,7 @@
 
 	/* site-section */
 	.site-section {
-	   padding-top: 60px;
+		padding-top: 60px;
 	}
 
 	.section-skills,
