--- a/assets/css/foxStyle.css
+++ b/assets/css/foxStyle.css
@@ -18,6 +18,9 @@
     object-fit: cover;
     border-radius: 0.5em;
 }
+#fox-img-2 {
+    display: none;
+}
 li {
     display: inline-block;
     padding: 5px;
